<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Police</string>
    <string name="setting">Setting</string>
    <string name="file_playback">DataFiles</string>
    <string name="application">Application</string>
    <string name="dial">Dial</string>
    <string name="record">Record</string>
    <string name="storage_not_exist">SDCard not exist !</string>
    <string name="storages_not_enough">SD card space is insufficient, upload manually or not ?</string>
    <string name="storage_not_enough">Storage not enough!</string>
    <string name="mode_single">Signal</string>
    <string name="mode_quick_series">QuickSeries</string>
    <string name="mode_interval">Interval</string>
    <string name="mode_timer">Timer</string>
    <string name="record_power_on">BootRecord</string>
    <string name="record_section">RecordSection</string>
    <string name="record_pre">Prerecord</string>
    <string name="record_delay">DelayRecord</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="one_min">1Min</string>
    <string name="five_min">5Min</string>
    <string name="ten_min">10Min</string>
    <string name="fifteenmin">15Min</string>
    <string name="fifteen_min">30Min</string>
    <string name="two_hours">2Hours</string>
    <string name="two_sec">2Sec</string>
    <string name="three_sec">3Sec</string>
    <string name="five_sec">5Sec</string>
    <string name="ten_sec">10Sec</string>
    <string name="fifteen_sec">15Sec</string>
    <string name="twenty_sec">20Sec</string>
    <string name="thirty_sec">30Sec</string>
    <string name="five_pics">5Pics</string>
    <string name="ten_pics">10Pics</string>
    <string name="twenty_pics">20Pics</string>
    <string name="start_record">Recording</string>
    <string name="stop_record">Stop Recording</string>
    <string name="takeing_photo">Taking Photo</string>
    <string name="updating">正在更新数据,请勿关机…</string>
    <string name="config_start">配置中,请稍候…</string>
    <string name="config_error">配置文件格式错误,请校对.</string>
    <string name="fenyang">汾阳执法</string>
    <string name="vos">vos移动视频</string>
    <string name="start_work">上班</string>
    <string name="video_cut_finish">截视频完成.</string>
    <string name="video_cut_start">开始截视频.</string>
    <string name="set_date_invalid">您设置的时间不合法，请重新设置！</string>
    <string name="open_uvc">外置摄像头已开启，主摄像头功能已屏蔽</string>
    <string name="disable_fuction">此功能尚未开放使用</string>
    <string name="not_support_disable_shutter_sound">当前设备不允许关闭快门声</string>
    <string name="set_date_success">时间设置成功</string>
    <string name="contact">联系人</string>
    <string name="not_support_flash_mode_off">当前设备不支持关闭闪光灯</string>
    <string name="not_support_flash_mode_on">当前设备不支持打开闪光灯</string>
    <string name="off_duty">Go off work</string>
    <string name="fire">Condition of a fire</string>
    <string name="forest">Forest</string> <string name="insect_attack">Insect pest</string>
    <string name="other">Other</string>
    <string name="rail_way">Wu An Xing</string>
    <string name="config_finished">Configuration completed</string>
    <string name="search">Police enquiry</string>
    <string name="police_event">Police Intelligence</string>
    <string name="communication">Safe communication</string>
    <string name="check">Mobile Verification</string>
    <string name="clock">Clock</string>
    <string name="calculator">Calculator</string>
    <string name="application_not_install">Uninstalled application</string>
    <string name="public_network_talkback">Intercom</string>
    <string name="action_settings">Settings</string>
    <string name="test"><xliff:g id="music_name">%s</xliff:g></string>
    <string name="record_sound">RecordSound</string>
    <string name="record_loop">Loop</string>
    <string name="login">Login</string>
    <string name="input_police_num">Police number.</string>
    <string name="input_device_num">Device number.</string>
    <string name="network_not_connected">The network is not Available!</string>
    <string name="sim_not_work">Sim Card not exist</string>
    <string name="registering">Registering wait a moment??</string>
    <string name="register_failed">Registration failed! please check and try again??</string>
    <string name="positive">Accept</string>
    <string name="register_success">Register Success!</string>
    <string name="open_value">1</string>
    <string name="close_value">0</string>
    <string name="video_assist">Video Assist</string>
    <string name="video_record">Video</string>
    <string name="sound_record">Audio</string>
    <string name="talk_back">TalkBack</string>
    <string name="map">Map</string>
    <string name="ok">Accept</string>
    <string name="call">Phone</string>
    <string name="file_manager">FileManager</string>
    <string name="skip">Skip</string>
    <string name="title_take_picture_setting">CaptureSetting</string>
    <string name="sound_take_picture">CaptureEffect</string>
    <string name="ratio_picture">CaptureRatio</string>
    <string name="mode_take_picture">RecordMode</string>
    <string name="cancel">Cancel</string>
    <string name="setting_reset">Reset</string>
    <string name="title_record_setting">RecordSetting</string>
    <string name="camera_setting">CameraSetting</string>
    <string name="record_auto">RecordBoot</string>
    <string name="record_ratio">RecordRatio</string>
    <!-- Preference所用到的key -->
    <string name="key_setting_picture">key_setting_picture_set</string>
    <string name="key_ratio_picture">key_ratio_take_picture</string>
    <string name="key_mode_picture">mode_take_picture</string>
    <string name="key_mode_quick_series">key_mode_quick_series</string>
    <string name="key_mode_interval">key_mode_interval</string>
    <string name="key_mode_timer">key_mode_timer</string>
    <string name="key_picture_set_reset">key_picture_reset</string>
    <string name="key_setting_record">key_setting_record</string>
    <string name="key_record_sound">key_record_sound</string>
    <string name="key_record_boot">key_record_boot</string>
    <string name="key_record_section">key_record_section</string>
    <string name="key_record_pre">key_record_pre</string>
    <string name="key_record_delay">key_record_delay</string>
    <string name="key_record_loop">key_record_loop</string>
    <string name="key_record_auto">key_record_auto</string>
    <string name="key_ratio_record">key_record_ratio</string>
    <string name="key_sound_take_picture">key_sound_take_picture</string>

    <string name="upload_cancel">upload cancel.</string>
    <string name="wrong_police_number">Police number is wrong, must be 6 numbers.</string>
    <string name="shutdown">shutdown</string>
    <string name="device_num">DeviceNum</string>
    <string name="police_num">PoliceNum</string>
    <string name="wrong_device_number">Device number is wrong, must be 5 numbers.</string>
    <string name="info_reset">InfoReset</string>
    <string name="service_control">Service</string>
    <string name="service_not_set">The Service Address hasn\'t been set. Please go to Settings-System-PlatformSetting.</string>
    <string name="password">Password</string>
    <string name="btn_forget"><u>Forgot password?</u></string>
    <string name="null_password">Password can\'t be null</string>
    <string name="input_password">Password</string>
    <string name="input_admin_password">AdminPassword</string>
    <string name="input_username">UserName</string>
    <string name="new_password">NewPassword</string>
    <string name="input_new_password">New Password.</string>
    <string name="original_password">Original</string>
    <string name="null_new_password">New pass cannot be null!</string>
    <string name="wrong_password">Wrong password. Please input again.</string>
    <string name="wechat">WeChat</string>
    <string name="click_one_more_time">Quit if press back key again within 3s.</string>
    <string name="sos_msg">PoliceNum is <xliff:g id="number">%s</xliff:g> send SOS!</string>
    <string name="confirm">OK</string>
    <string name="gps_timestamp"><xliff:g id="index">%d</xliff:g>\n<xliff:g id="time">%s</xliff:g>,000 --> <xliff:g id="time2">%s</xliff:g>,500\n</string>
    <string name="no_class_find">App not installed</string>
    <string name="only_one_camera">No Sub Camera</string>

    <string name="ignore">Ignore</string>
    <string name="choose_power_save">The system will enter the POWER SAVE MODE, if had other operation ,please cancel.</string>


    <string name="remeber_psw">Remember Password</string>
    <string name="uninstall_apk_sure">uninstall this application</string>
    <string name="isgetlocation">Positioning success</string>
    <string name="id_card">ID Card</string>

    <string name="low_battary_15">电量过低，请及时充电！</string>
    <string name="low_battary_5">电量已到达预警值，请勿过度放电！</string>

    <string name="ftp_down_file_name">File Name</string>
    <string name="ftp_reload">Reload</string>
    <string name="ftp_down_check">Check</string>
    <string name="ftp_down_wait">Wait</string>
    <string name="conti">continue</string>
    <string name="disconnect">Disconnect</string>
    <string name="down_file">File down</string>
    <string name="tiewutong">Tie Wu Tong</string>
    <string name="power_saving_mode">超级省电模式，禁止相关操作！</string>
    <string name="camera_occupy">摄像头被占用，等释放摄像头后再使用！</string>
    <string name="translation">Smart translation</string>
</resources>
