<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zzx="http://schemas.android.com/apk/res-auto"
    android:key="@string/key_setting_record">
    <PreferenceCategory
        android:title="@string/title_record_setting"
        android:layout="@layout/custom_setting_item">
        <CheckBoxPreference
            android:key="@string/key_record_auto"
            android:title="@string/record_auto"
            android:summary="@string/open"
            android:summaryOn="@string/open"
            android:summaryOff="@string/close"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/key_record_sound"
            android:title="@string/record_sound"
            android:summary="@string/open"
            android:summaryOn="@string/open"
            android:summaryOff="@string/close"
            android:defaultValue="true" />
        <com.zzx.police.view.SettingCustomListPreference
            android:key="@string/key_ratio_record"
            android:summary="1920x1080"
            zzx:defaultValue="1920x1080"
            android:title="@string/record_ratio"
            android:layout="@layout/custom_setting_item"
            android:persistent="true"
            android:entries="@array/array_ratio_record"
            android:entryValues="@array/array_ratio_record"/>
        <com.zzx.police.view.SettingCustomListPreference
            android:key="@string/key_record_section"
            android:summary="@string/close"
            zzx:defaultValue="0"
            android:title="@string/record_section"
            android:layout="@layout/custom_setting_item"
            android:persistent="true"
            android:entries="@array/record_section_setting"
            android:entryValues="@array/record_section_setting_value"/>
        <com.zzx.police.view.SettingCustomListPreference
            android:key="@string/key_record_pre"
            android:title="@string/record_pre"
            android:summary="@string/close"
            zzx:defaultValue="0"
            android:layout="@layout/custom_setting_item"
            android:persistent="true"
            android:entries="@array/record_pre_delay_setting"
            android:entryValues="@array/record_pre_delay_setting_value"/>
        <com.zzx.police.view.SettingCustomListPreference
            android:key="@string/key_record_delay"
            android:summary="@string/close"
            zzx:defaultValue="0"
            android:title="@string/record_delay"
            android:layout="@layout/custom_setting_item"
            android:persistent="true"
            android:entries="@array/record_pre_delay_setting"
            android:entryValues="@array/record_pre_delay_setting_value"/>
        <CheckBoxPreference
            android:key="@string/key_record_loop"
            android:defaultValue="true"
            android:title="@string/record_loop"
            android:persistent="true"
            android:summaryOff="@string/close"
            android:summaryOn="@string/open"/>
        <Preference
            android:key="@string/key_picture_set_reset"
            android:layout="@layout/custom_setting_item"
            android:title="@string/setting_reset"/>
    </PreferenceCategory>
</PreferenceScreen>