<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zzx="http://schemas.android.com/apk/res-auto"
    android:key="@string/key_setting_picture"
    >
    <PreferenceCategory
        android:title="@string/title_take_picture_setting"
        android:layout="@layout/custom_setting_item">
        <CheckBoxPreference
            android:title="@string/sound_take_picture"
            android:key="@string/key_sound_take_picture"
            android:defaultValue="true"
            android:summaryOn="@string/open"
            android:summaryOff="@string/close"/>
        <com.zzx.police.view.SettingCustomListPreference
            android:title="@string/ratio_picture"
            android:key="@string/key_ratio_picture"
            android:layout="@layout/custom_setting_item"
            zzx:defaultValue="3600x2160"
            android:summary="3600x2160"
            android:entries="@array/array_ratio_capture_txt"
            android:entryValues="@array/array_ratio_capture_txt"/>
        <PreferenceScreen
            android:title="拍照模式"
            android:layout="@layout/custom_setting_item"
            android:key="@string/key_mode_picture">
            <intent android:action="com.zzx.action.CaptureMode"
                android:targetClass="com.zzx.police.SettingActivity"
                android:targetPackage="com.zzx.police"/>
            <!--<com.zzx.police.view.SettingCustomListPreference
                android:key="@string/key_mode_quick_series"
                android:layout="@layout/custom_setting_item"
                zzx:defaultValue="5"
                android:title="@string/mode_quick_series"
                android:summary="@string/five_pics"
                android:entries="@array/array_quick_series_mode"
                android:entryValues="@array/array_quick_series_mode_value"/>
            <com.zzx.police.view.SettingCustomListPreference
                android:layout="@layout/custom_setting_item"
                zzx:defaultValue="2"
                android:key="@string/key_mode_interval"
                android:summary="@string/two_sec"
                android:title="@string/mode_interval"
                android:entries="@array/array_interval_mode"
                android:entryValues="@array/array_interval_mode_value"/>
            <com.zzx.police.view.SettingCustomListPreference
                android:layout="@layout/custom_setting_item"
                zzx:defaultValue="5"
                android:key="@string/key_mode_timer"
                android:summary="@string/five_sec"
                android:title="@string/mode_timer"
                android:entries="@array/array_timer_mode"
                android:entryValues="@array/array_timer_mode_value"/>-->
            </PreferenceScreen>
        <Preference
            android:key="@string/key_picture_set_reset"
            android:layout="@layout/custom_setting_item"
            android:title="@string/setting_reset"/>
        </PreferenceCategory>
</PreferenceScreen>