<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@drawable/custom_progress_bg"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/group_report"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/report_fire"
            android:checked="true"
            android:text="@string/fire"
            style="@style/RadioBtnReport" />
        <RadioButton
            android:id="@+id/report_forest"
            android:text="@string/forest"
            style="@style/RadioBtnReport" />
        <RadioButton
            android:id="@+id/report_insect"
            android:text="@string/insect_attack"
            style="@style/RadioBtnReport" />
        <RadioButton
            android:id="@+id/report_other"
            android:text="@string/other"
            style="@style/RadioBtnReport"/>
    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_report_confirm"
            android:text="@string/confirm"
            style="@style/BtnReport" />
        <Button
            android:id="@+id/btn_report_cancel"
            android:text="@string/cancel"
            style="@style/BtnReport" />
    </LinearLayout>
</LinearLayout>