<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zzx="http://schemas.android.com/apk/res-auto"
    android:layout="@layout/preference_container">
    <!--<com.zzx.police.view.CustomDialogPreference-->
    <!--android:key="record_sound"-->
    <!--android:title="@string/record_sound"-->
    <!--android:summary="@string/open"-->
    <!--zzx:defaultValue="@string/open_value"-->
    <!--android:layout="@layout/preference_screen_item_layout"-->
    <!--android:persistent="true"-->
    <!--zzx:entries="@array/record_setting_open_close"-->
    <!--zzx:entryValues="@array/record_setting_open_close_value"/>-->

    <com.zzx.police.view.CustomDialogPreference
        android:key="record_boot"
        android:title="@string/record_power_on"
        android:summary="@string/close"
        zzx:defaultValue="@string/close_value"
        android:layout="@layout/preference_screen_item_layout"
        android:persistent="true"
        zzx:entries="@array/record_setting_open_close"
        zzx:entryValues="@array/record_setting_open_close_value"/>
    <!--<com.zzx.police.view.CustomDialogPreference-->
        <!--android:key="@string/key_record_section"-->
        <!--android:summary="@string/five_min"-->
        <!--zzx:defaultValue="5"-->
        <!--android:title="@string/record_section"-->
        <!--android:layout="@layout/preference_screen_item_layout"-->
        <!--android:persistent="true"-->
        <!--zzx:entries="@array/record_section_setting"-->
        <!--zzx:entryValues="@array/record_section_setting_value"/>-->
    <com.zzx.police.view.CustomDialogPreference
        android:key="@string/key_record_pre"
        android:title="@string/record_pre"
        android:summary="@string/close"
        zzx:defaultValue="0"
        android:layout="@layout/preference_screen_item_layout"
        android:persistent="true"
        zzx:entries="@array/record_pre_delay_setting"
        zzx:entryValues="@array/record_pre_delay_setting_value"/>
    <com.zzx.police.view.CustomDialogPreference
        android:key="@string/key_record_delay"
        android:summary="@string/close"
        zzx:defaultValue="0"
        android:title="@string/record_delay"
        android:layout="@layout/preference_screen_item_layout"
        android:persistent="true"
        zzx:entries="@array/record_pre_delay_setting"
        zzx:entryValues="@array/record_pre_delay_setting_value"/>
    <!--<com.zzx.police.view.CustomDialogPreference
        android:key="record_loop"
        android:summary="@string/close"
        zzx:defaultValue="@string/close_value"
        android:title="@string/record_circle"
        android:layout="@layout/preference_screen_item_layout"
        android:persistent="true"
        zzx:entries="@array/record_setting_open_close"
        zzx:entryValues="@array/record_setting_open_close_value"/>-->
</PreferenceScreen>