<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon"
            android:background="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_police_number"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/input_police_num"
            android:background="@drawable/edit_text_bg"
            android:cursorVisible="true"
            android:layout_below="@id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <TextView
            android:layout_toLeftOf="@id/et_police_number"
            android:text="@string/police_num"
            android:textSize="20sp"
            android:padding="7dp"
            android:layout_alignTop="@id/et_police_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_device_num"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/input_device_num"
            android:cursorVisible="true"
            android:layout_below="@id/et_police_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned" />
        <TextView
            android:layout_toLeftOf="@id/et_device_num"
            android:text="@string/device_num"
            android:textSize="20sp"
            android:padding="7dp"
            android:layout_alignTop="@id/et_device_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_positive"
            android:text="@string/positive"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_login"
            android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_device_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_skip"
            android:text="@string/skip"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login"
            android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>