<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon"
            android:background="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/layout_password"
            android:layout_below="@id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/input_password"
            android:background="@drawable/edit_text_bg"
            android:cursorVisible="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_toLeftOf="@id/et_password"
            android:layout_alignTop="@id/et_password"
            android:text="@string/password"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_new_password"
            android:layout_below="@id/et_password"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/input_new_password"
            android:background="@drawable/edit_text_bg"
            android:cursorVisible="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />
        <TextView
            android:id="@+id/tv_new_password"
            android:text="@string/new_password"
            android:layout_toLeftOf="@id/et_new_password"
            android:layout_alignTop="@id/et_new_password"
            android:textSize="18sp"
            android:padding="7dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_positive"
            android:text="@string/positive"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_login"
            android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/layout_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_skip"
            android:text="@string/skip"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_login"
            android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/btn_forget_password"
            android:text="@string/btn_forget"
            android:visibility="gone"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/btn_skip"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>