<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon"
            android:background="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:layout_width="103dp"
            android:layout_height="123dp" />
        <RelativeLayout
            android:id="@+id/layout_usermane"
            android:layout_below="@id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_usermane"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/input_username"
                android:background="@drawable/edit_text_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/layout_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_usermane"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/et_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/input_password"
                android:background="@drawable/edit_text_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberPassword" />

            <LinearLayout
                android:id="@+id/layout_remember"
                android:layout_below="@id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <CheckBox
                    android:id="@+id/cb_remeber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remeber_psw"/>

            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_positive"
            android:text="@string/login"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_login"
            android:textAppearance="@android:style/TextAppearance.Holo.Large.Inverse"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/layout_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>